--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,8 +6,8 @@
         <h1>Hello Spring</h1>
         <p>회원 기능</p>
         <p>
-            <a href="/templates/members/new">회원 가입</a>
-            <a href="/templates/members">회원 목록</a>
+            <a href="/members/new">회원 가입</a>
+            <a href="/members">회원 목록</a>
         </p>
     </div>
 </div>
